--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
     "dependencies": {
-        "jsdoc-wmf-theme": "0.0.3",
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "wikimedia-ui-base": "^0.15.0"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.29.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
-        "webpack-notifier": "^1.6.0"
+        "webpack-notifier": "^1.6.0",
+        "eslint-config-wikimedia": "0.15.0",
+        "grunt": "1.1.0",
+        "grunt-banana-checker": "0.9.0",
+        "grunt-eslint": "22.0.0",
+        "grunt-stylelint": "0.14.0",
+        "stylelint-config-wikimedia": "0.9.0"
     },
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "test": "grunt test"
     }
 }
