Avoid end dates being before start dates
Also add dummy .env file, and fix testing.

Change-Id: I9199d6f1998c8ae6f27754c48658c9bda7b28d7c

--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
             "composer validate",
             "./bin/console lint:twig ./templates",
             "./bin/console lint:yaml ./config",
-            "phpcs -s ."
+            "phpcs -s .",
+            "./bin/phpunit"
         ]
     },
     "conflict": {
