build, styles: Replace WikimediaUI Base with Codex design tokens
This patch replaces the WikimediaUI Base library with the new
Codex design tokens library.
The new library is mostly a drop-in replacement for the old one.

Change-Id: Id3caad7239260045aab65723c33201f88d8509da

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "normalize.css": "^8.0.1",
-        "wikimedia-ui-base": "^0.15.0"
+        "@wikimedia/codex-design-tokens": "^1.0.0",
+        "normalize.css": "^8.0.1"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.29.0",
