--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,15 @@
     "description": "A tool for displaying timzone information.",
     "license": "AGPL-3.0-or-later",
     "require": {
-        "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.8",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/monolog-bundle": "^3.5",
-        "symfony/twig-bundle": "5.0.*",
-        "symfony/webpack-encore-bundle": "^1.7",
+        "doctrine/annotations": "^2",
+        "symfony/console": "^5",
+        "symfony/dotenv": "^5",
+        "symfony/framework-bundle": "^5",
+        "symfony/monolog-bundle": "^3",
+        "symfony/twig-bundle": "^5",
+        "symfony/webpack-encore-bundle": "^1",
         "symfony/yaml": "5.0.*",
         "wikimedia/toolforge-bundle": "^0.19.0"
     },
@@ -32,17 +30,23 @@
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.5",
-        "mediawiki/mediawiki-codesniffer": "^31.0",
+        "mediawiki/mediawiki-codesniffer": "^41",
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^5.0",
+        "symfony/phpunit-bridge": "^6",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        },
+        "platform": {
+            "php": "7.4"
+        }
     },
     "extra": {
         "symfony": {
@@ -62,15 +66,11 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "@auto-scripts"
+            "./bin/console cache:clear"
         ],
         "post-update-cmd": [
-            "@auto-scripts"
+            "./bin/console cache:clear"
         ],
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
         "test": [
             "composer validate",
             "./bin/console lint:twig ./templates",
